--- a/index.html
+++ b/index.html
@@ -1,137 +1,110 @@
 <!DOCTYPE html>
-<html>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
-  <link rel="stylesheet" href="theme.css">
-  <title>Samstep</title>
-  <link rel="icon" href="images/samstep-light.png">
-  <link rel="stylesheet" type="text/css" href="transition.css">
-  <meta name="description" content="Hey there! My name is Sam.">
-  <meta name="keywords" content="samstep">
-  <meta content="samstep.net" property="og:title">
-  <meta content="Hey there! My name is Sam. Learn a little bit about me on my site!" property="og:description">
-  <meta content="https://samstep.net" property="og:url">
-  <meta content="https://samstep.net/images/samstep.svg" property="og:image">
-  <meta content="#2B738B" data-react-helmet="true" name="theme-color">
-</head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
 
-<body class="">
-  <div class="text-center text-white align-items-center d-flex py-5 h-50" style="background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)), url(images/bmd.jpg); background-position: center center, center center; background-size: cover, cover; background-repeat: repeat, repeat">
-    <div class="container py-5">
-      <div class="row">
-        <div class="mx-auto col-lg-8 col-md-10">
-          <img class="d-block rounded-circle img-fluid mx-auto" src="images/samstep-light-t.svg" width="150">
-          <h3 class="display-4 mb-3" style="">Samstep</h3>
-          <h3 class="text-body">👋 <b>Hey there!</b></h3>
-        </div>
+    <title>Samstep | Hi</title>
+
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+    <meta name="description" content="" />
+
+    <link rel="icon" href="./images/samstep-light.png" />
+    <link rel="stylesheet" href="grape.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
+  </head>
+
+  <body id="irndyb">
+    <section id="igbjpg" class="gjs-section">
+      <div id="i1uehx" class="gjs-container">
+        <h1 id="iokscs" class="gjs-heading">👋Hey there!<br /></h1>
+        <div id="iomic">My name is Sam, a college student studying Electrical and Computer Engineering passionate about embedded systems, robotics, and video engineering. <br /></div>
       </div>
-    </div>
-  </div>
-  <div class="py-3 pt-3">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12 text-left" style="">
-          <p class="lead pt-2 px-1">Hey there! My name is Sam and I am a college student studying Electrical and Computer Engineering. My passions lie in broadcast A/V technology, esports, and IT. I also enjoy making Discord bots in my free time and playing esports games. I am the Operations Director for the <a href="https://pacificesports.org" target="_blank">Pacific Esports League</a>&nbsp;and co-lead for a scholastic esports a program at the collegiate level.&nbsp;</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="py-3">
-    <div class="container">
-      <div class="row">
-        <h3 class="display-4 text-left"><b>Discord Bot Developer</b></h3>
-      </div>
-      <div class="row my-2">
-        <div class="col-md-2 mx-auto w-25 p-1" style="transition: all 0.25s;"><img class="img-fluid d-block rounded-circle" src="https://camo.githubusercontent.com/56a4b17e7621723ebfc4631796b5a6f591721aadcc13776adfee0a712db0f30d/68747470733a2f2f692e696d6775722e636f6d2f705250494478562e706e67" height="15ch" style=""></div>
-        <div class="col-md-8" style="transition: all 0.25s;">
-          <div class="blockquote mb-0">
-            <p class=""><b>ModMail</b></p>
-            <p class="">I love making utility focused Discord bots that help server administrators and staff do their job efficiently, quickly, and organized. This system has helped me and countless staff members manage support requests with ease all within Discord. This is the same system used in the PEL Discord Server.</p>
-            <a class="btn btn-primary" href="https://samstep.net/bots/modmail" style="">Project Page</a>
+    </section>
+    <div id="ihm4u" class="gjs-grid-row">
+      <div id="ipigjg" class="gjs-grid-column card">
+        <div id="ih4tpq" class="gjs-grid-row"></div>
+        <div id="ix7gtx" class="gjs-grid-row">
+          <div id="ib3lsd" class="gjs-grid-column">
+            <h1 id="i9efps" class="gjs-heading">ModMail Discord Bot<br /></h1>
+            <div id="ikc3uj">I love making utility focused Discord bots that help server administrators and staff do their job efficiently, quickly, and organized. This system has helped me and countless staff members manage support requests with ease all within Discord.</div>
+            <div id="i24hq1"><a href="https://samstep.net/bots/modmail" id="iex6pg" class="gjs-link">Learn More</a></div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="py-3">
-    <div class="container">
-      <div class="row">
-        <h3 class="display-4 text-left"><b>Information Technology</b></h3>
-      </div>
-      <div class="row my-2">
-        <div class="col-md-2 mx-auto w-25 p-1" style="transition: all 0.25s;"><img class="img-fluid d-block rounded-circle" src="images/hl.jpg" height="15ch" style=""></div>
-        <div class="col-md-8" style="transition: all 0.25s;">
-          <div class="blockquote mb-0">
-            <p class=""><b>Home Lab</b></p>
-            <p class="">Due to COVID and a work from home enviroment for my family, I took the initative to create a robust and scalable network and homelab. The setup is complete with a NAS, media server, and game host server.</p>
-            <a class="btn btn-primary" style="" href="#">Project Page</a>
+      <div class="gjs-grid-column card" id="iwrct">
+        <div class="gjs-grid-row" id="icni9"></div>
+        <div class="gjs-grid-row" id="i9e5j">
+          <div class="gjs-grid-column" id="irvbl">
+            <h1 class="gjs-heading" id="iswhv">Home Lab<br /></h1>
+            <div id="ihd1w">Due to COVID and a work from home enviroment for my family, I took the initative to create a robust and scalable network and homelab. The setup is complete with a NAS, media server, and game host server.</div>
+            <!-- <div id="iyshk"><a href="" class="gjs-link" id="ixw7l">Learn More</a></div> -->
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="py-3">
-    <div class="container">
-      <div class="row">
-        <h3 class="display-4 text-left">Nonprofit Co-Founder</h3>
-      </div>
-      <div class="row my-2" style="">
-        <div class="col-md-2 mx-auto w-25 p-1" style="transition: all 0.25s;"><img class="img-fluid d-block rounded-circle" src="https://i.imgur.com/wr8SqNX.png" height="15ch" style=""></div>
-        <div class="col-md-8" style="transition: all 0.25s;">
-          <div class="blockquote mb-0">
-            <p class="">Helping in developing the <a href="https://pacificesports.org" target="_blank">Pacific Esports League</a> to what it is today has been a blast! I am estatic for what the future holds for the organization and looking forward to helping bring more Californian students to esports.</p>
-            <a class="btn btn-primary" href="https://pacificesports.org/about-us" style="">Visit Website</a>
+      <div class="gjs-grid-column card" id="iqall">
+        <div class="gjs-grid-row" id="irwrq"></div>
+        <div class="gjs-grid-row" id="it875">
+          <div class="gjs-grid-column" id="ixbsk">
+            <h1 class="gjs-heading" id="i9k2v">Broadcasting<br /></h1>
+            <div id="iv14v">I have experience with broadcast signal flows in remote and in-person production environments. I mainly have gathered my experience through esports and HOW shows. I especially enjoy camera operating, lighting and technical directing.</div>
+            <!-- <div id="imu76"><a href="" class="gjs-link" id="ii92j">Learn More</a></div> -->
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="text-center py-3">
-    <div class="container">
-      <div class="row">
-        <div class="mx-auto col-md-11" style="">
-          <p class="mb-3 lead">While I do not use social media often, please follow for occassional updates!</p>
+      <!-- <div class="gjs-grid-column card" id="iqall">
+        <div class="gjs-grid-row" id="irwrq"></div>
+        <div class="gjs-grid-row" id="it875">
+          <div class="gjs-grid-column" id="ixbsk">
+            <h1 class="gjs-heading" id="i9k2v">Pacific Esports League<br /></h1>
+            <div id="iv14v">Helping in developing the Pacific Esports League to what it is today has been a blast! I am estatic for what the future holds for the organization and looking forward to helping bring more Californian students to esports.</div>
+            <div id="imu76"><a href="https://pacificesports.org/about-us" class="gjs-link" id="ii92j">Learn More</a></div>
+          </div>
         </div>
       </div>
-      <div class="row">
-        <div class="mx-auto col-md-4">
-          <div class="row">
-            <div class="col-md-12 d-flex align-items-center justify-content-between px-5">
-              <a href="https://twitter.com/Saamstep" target="_blank">
-                <i class="d-block fa fa-twitter text-muted fa-2x"></i>
-              </a>
-              <a href="https://youtube.com/Samstep " target="_blank">
-                <i class="d-block fa text-muted fa-2x fa-youtube"></i>
-              </a>
-              <a href="https://twitch.tv/Samstep" target="_blank">
-                <i class="d-block fa text-muted fa-2x fa-twitch"></i>
-              </a>
+      <div class="gjs-grid-column card" id="iqall">
+        <div class="gjs-grid-row" id="irwrq"></div>
+        <div class="gjs-grid-row" id="it875">
+          <div class="gjs-grid-column" id="ixbsk">
+            <h1 class="gjs-heading" id="i9k2v">Team Rank Calculator<br /></h1>
+            <div id="iv14v">Find the average rank of a team of 5+ players in VALORANT or League of Legends.</div>
+            <div id="imu76"><a href="https://calculator.pacificesports.org" class="gjs-link" id="ii92j">Visit</a> | <a href="https://github.com/pacificesports/val-avg-rank-calculator" class="gjs-link" id="ii92j">See Source</a></div>
+          </div>
+        </div>
+      </div> -->
+    </div>
+    <section id="ifs9z" class="gjs-section">
+      <div id="i91zj" class="gjs-container">
+        <div id="ievmp" class="gjs-grid-row">
+          <div id="iofzp" class="gjs-grid-column">
+            <div id="itgwf" class="gjs-grid-row">
+              <div id="il6mv" class="gjs-grid-column">
+                <div data-type-icon id="isfqo" title="Twitter Icon" class="gjs-icon">
+                  <a class="icon" href="https://twitter.com/saamstep" target="_blank"
+                    ><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" >
+                      <path fill="currentColor" d="M12.186 8.672 18.743.947h-2.927l-5.005 5.9-4.44-5.9H0l7.434 9.876-6.986 8.23h2.927l5.434-6.4 4.82 6.4H20L12.186 8.672Zm-2.267 2.671L8.544 9.515 3.2 2.42h2.2l4.312 5.719 1.375 1.828 5.731 7.613h-2.2l-4.699-6.237Z"></path></svg
+                  ></a>
+                </div>
+                <div data-type-icon title="YouTube Icon" id="i57pm5" class="gjs-icon">
+                  <a class="icon" href="https://youtube.com/Samstep" target="_blank"
+                    ><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24" >
+                      <path fill-rule="evenodd" d="M19.7 3.037a4.26 4.26 0 0 0-.789-1.964 2.84 2.84 0 0 0-1.984-.84c-2.767-.2-6.926-.2-6.926-.2s-4.157 0-6.928.2a2.836 2.836 0 0 0-1.983.84A4.225 4.225 0 0 0 .3 3.038a30.148 30.148 0 0 0-.2 3.206v1.5c.01 1.071.076 2.142.2 3.206.094.712.363 1.39.784 1.972.604.536 1.38.837 2.187.848 1.583.15 6.731.2 6.731.2s4.161 0 6.928-.2a2.844 2.844 0 0 0 1.985-.84 4.27 4.27 0 0 0 .787-1.965c.124-1.064.19-2.135.2-3.206V6.243a30.672 30.672 0 0 0-.202-3.206ZM8.008 9.59V3.97l5.4 2.819-5.4 2.8Z" clip-rule="evenodd"></path></svg
+                  ></a>
+                </div>
+                <div data-type-icon title="GitHub Icon" id="i57pm5" class="gjs-icon">
+                  <a class="icon" href="https://github.com/saamstep" target="_blank"
+                    ><svg aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 4 24 24" >
+                      <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"></path></a>
+                </div>
+              </div>
             </div>
+            <div id="i7s0t">Website by Samstep. Made with GrapeJS Studio.<br /></div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="bg-dark">
-    <div class="">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 text-center pt-2">
-            <p class="text-white">Website by Sam | Made with <a href="https://pingendo.com/" target="_blank">Pingendo</a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
-  </div>
-
-</body>
-
+    </section>
+  </body>
 </html>
