--- a/404.html
+++ b/404.html
@@ -1,39 +1,28 @@
 <!DOCTYPE html>
-<html>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/v4-shims.css">
-  <link rel="stylesheet" href="theme.css">
-  <link rel="stylesheet" href="../theme.css">
-  <link rel="stylesheet" href="../../theme.css">
-  <title>Samstep - Page Not Found</title>
-  <link rel="icon" href="https://avatars2.githubusercontent.com/u/24730717?s=400&amp;v=4">
-</head>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
 
-<body class="bg-dark">
-  <div class="bg-dark py-5 pb-5">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12"><img class="d-block rounded-circle img-fluid mx-auto" src="images/samstep-light.png" width="200"></div>
-      </div>
-      <div class="row">
-        <div class="col-sm-10 col-md-12 ml-0 mt-0 my-2">
-          <h1 class="text-light display-4 text-center" style="">Page Not Found</h1>
-        </div>
-      </div>
-      <div class="row">
-        <div class="text-center my-2 col-md-12" style=""><a class="btn btn-light" href="/" data-target="/">Go Home</a></div>
+    <title>Where am I?</title>
+
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+
+    <meta name="description" content="" />
+
+    <link rel="icon" href="./images/samstep-light.png" />
+    <link rel="stylesheet" href="grape.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet" />
+  </head>
+
+  <body style="background-color: #020a13; padding: 20ch" id="irndyb">
+    <div id="i1uehx" class="gjs-container">
+      <h1 id="iokscs" class="gjs-heading">PAGE NOT FOUND<br /></h1>
+      <div id="iomic">
+        <a href="/" id="iex6pg" class="gjs-link">Go Home</a>
       </div>
     </div>
-  </div>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-  <script src="https://cdn.syndication.twimg.com/timeline/profile?callback=__twttr.callbacks.tl_i4_profile_Saamstep_new&amp;dnt=false&amp;lang=en&amp;min_position=1059470408716406785&amp;screen_name=Saamstep&amp;suppress_response_codes=true&amp;t=1712957&amp;tz=GMT-0800&amp;with_replies=false" async=""></script>
-  <pingendo onclick="window.open('https://pingendo.com/', '_blank')" style="cursor:pointer;position: fixed;bottom: 20px;right:20px;padding:4px;background-color: #00b0eb;border-radius: 8px; width:220px;display:flex;flex-direction:row;align-items:center;justify-content:center;font-size:14px;color:white">Made with Pingendo Free&nbsp;&nbsp;<img src="https://pingendo.com/site-assets/Pingendo_logo_big.png" class="d-block" alt="Pingendo logo" height="16"></pingendo>
-</body>
-
+  </body>
 </html>
