--- a/bots/modmail.html
+++ b/bots/modmail.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL='https://github.com/saamstep/modmail#read-me'" />
+<meta http-equiv="refresh" content="0; URL='https://github.com/saamstep/modmail#readme'" />
